--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
+    "expo": "^47.0.14",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.7"
+    "expo-updates": "~0.15.6",
+    "react": "^18.1.0",
+    "react-native": "^0.70.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
